--- a/src/clr-core/styles/layout/_type-vertical.scss
+++ b/src/clr-core/styles/layout/_type-vertical.scss
@@ -105,11 +105,11 @@
   }
 
   [cds-layout~='align:top'] {
-    margin-bottom: auto;
+    margin-bottom: auto !important;
   }
 
   [cds-layout~='align:bottom'] {
-    margin-top: auto;
+    margin-top: auto !important;
   }
 
   [cds-layout~='align:right'] {
